--- a/Maslibros.html
+++ b/Maslibros.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 <html lang="es">
-<div align="left"><img src="C:\Users\SupervYesmarketSPS\Desktop\libreria digital.webp" width="200" height="200"></div>
+<div align="left"><img src="libreria digital.webp" width="200" height="200"></div>
 <style type="text/css">
 body {
   background: #800000;
@@ -145,17 +145,17 @@ p{color:orange;}
 <ol type="I">
 <l1><strong>III.Animales</strong></l1> 
 </ol>
-<a href="https://www.casadellibro.com/libro-la-razon-de-estar-contigo/9788416867219/4800644"><img src="C:\Users\SupervYesmarketSPS\Desktop\contigo.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
+<a href="https://www.casadellibro.com/libro-la-razon-de-estar-contigo/9788416867219/4800644"><img src="contigo.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
 
-<a href="https://www.planetadelibros.com/libro-vida-de-pi/1467"><img src="C:\Users\SupervYesmarketSPS\Desktop\Pi.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
+<a href="https://www.planetadelibros.com/libro-vida-de-pi/1467"><img src="Pi.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
 
-<a href="https://www.planetadelibros.com/libro-el-libro-de-la-selva/216561"><img src="C:\Users\SupervYesmarketSPS\Desktop\el libro de la selva.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
+<a href="https://www.planetadelibros.com/libro-el-libro-de-la-selva/216561"><img src="el libro de la selva.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
 
 <ol type="I">
 <l1><strong>IIII.Aventura</strong></l1> 
 </ol>
-<a href="https://blume.net/catalogo/395-el-maravilloso-mago-de-oz-9788498015546.html"><img src="C:\Users\SupervYesmarketSPS\Desktop\oz.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
+<a href="https://blume.net/catalogo/395-el-maravilloso-mago-de-oz-9788498015546.html"><img src="oz.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
 
-<a href="https://www.amazon.com/-/es/dp/B08KTPTHZ3"><img src="C:\Users\SupervYesmarketSPS\Desktop\cazagigantes.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
+<a href="https://www.amazon.com/-/es/dp/B08KTPTHZ3"><img src="cazagigantes.jpg" onmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
 
-<a href="https://www.planetadelibros.com/libro-la-isla-del-tesoro/216562"><img src="C:\Users\SupervYesmarketSPS\Desktop\tesoro.jpg" nmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
+<a href="https://www.planetadelibros.com/libro-la-isla-del-tesoro/216562"><img src="tesoro.jpg" nmouseover="this.width=300;this.height=300;" onmouseout="this.width=200;this.height=200;" width="200" height="200"> </a>
