--- a/Maslibros.html
+++ b/Maslibros.html
@@ -116,7 +116,7 @@ i {
 <div id="container">
     <nav>
         <ul>
-            <li><a href="file:///F:/ejercicios%20de%20sublime%20text/biblioteca.html">Inicio</a></li>
+            <li><a href="https://erick-25231.github.io/biblioteca.html">Inicio</a></li>
             <li><a href="#">Libros <i class="down"></i></a>
             <!-- Primer Menu Desplegable -->
             <ul>
